修改配置文件

--- a/any-config/src/main/resources/bootstrap.yml
+++ b/any-config/src/main/resources/bootstrap.yml
@@ -26,8 +26,8 @@ spring:
         bootstrap: true
         git:
           uri: https://gitee.com/zwwtnt/any-config.git
-          username: xxxx
-          password: xxxx
+          username: zwwtnt@yeah.net
+          password: 1.session
           search-paths: /**
           basedir: ./tmp
   boot:
